--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
   </head>
 
   <body>
+    <!-- <span class="video-container">
+      <video
+        src="./assets/images/loop.mp4" autoplay loop muted>
+      <video>
+    </span> -->
+
     <div class="scores"><a href="highscores.html">View Highscores</a></div>
 
     <div class="timer">Time: <span id="time">0</span></div>
@@ -37,10 +43,6 @@
           Enter initials: <input type="text" id="initials" max="3" />
           <button id="submit">Submit</button>
         </p>
-      </div>
-
-      <div>
-        <img class="image1" src="./assets/images/Questions.png" alt="">
       </div>
 
       <div id="feedback" class="feedback hide"></div>
